add login with default password and username

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <ul>
       <li><a routerLink="/Menu" routerLinkActive="active" ariaCurrentWhenActive="page">Menu</a></li>
       <li><a routerLink="/MyTasks" routerLinkActive="active" ariaCurrentWhenActive="page">My Tasks</a></li>
-      <li style="float: right"><a routerLink="/Login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a></li>
+      <li><a routerLink="/Login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a></li>
 
     </ul>
   </nav>
