--- a/src/app/users/task.component.html
+++ b/src/app/users/task.component.html
@@ -51,7 +51,7 @@
   <ng-container matColumnDef="deleteButton">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let task">
-      <button (click)="deleteUserById(task.id)">X</button>
+      <button (click)="deleteTaskById(task.id)">X</button>
     </td>
   </ng-container>
 
