--- a/src/app/users/task.component.css
+++ b/src/app/users/task.component.css
@@ -1,21 +1,21 @@
-table{
+table {
   margin-right: 10%;
   margin-left: 10%;
   margin-top: 3em;
   width: 80%;
-  border: solid rgba(0,0,0,5%);
+  border: solid rgba(0, 0, 0, 5%);
 }
 
-h1{
+h1 {
   text-align: center;
   margin-top: 1em;
 }
 
-#name{
+#name {
   margin-right: 3em;
 }
 
-#loginButton{
+#loginButton {
   margin-top: 2em;
   margin-right: 45%;
   margin-left: 45%;
